<resources>
    <string name="app_name">summing</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="addSpend">Add spend</string>
    <string name="spendDetails">Spend details</string>
    <string name="saveSpend">Save spend</string>
    <string name="cost">Cost</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="errorMessageWS">Error obtaining list from ws</string>
    <string name="transportReference">Transport reference</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_password_incorrect">User or password is not correct</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="setLocation">Get location</string>
    <string name="selectLocation">Select a location</string>
    <string name="confirm">Confirm</string>
    <string name="askUseLocation">Use this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setDestination">Select a destination</string>
    <string name="cannotSaveSpen">Cannot save spend</string>
    <string name="spentSaved">Spent saved</string>
    <string name="logout">Log out</string>
    <string name="login_message">Please provide the information below</string>
    <string name="title_spend">Spends</string>
    <string name="deleteSpend">Delete spend</string>
    <string name="spendSelection">Spend selection</string>
    <string name="spendsDeleted">Spends selected have been deleted</string>
    <string name="errorDeletingSpends">There was an error when trying to delete selected spends</string>

    <array name="spendType">
        <item name="general">General</item>
        <item name="transport">Transport</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spend_type">Spend type</string>
    <string name="useLocation">Use location</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="askSpendType">Please select the spend type</string>
    <string name="generic">Generic</string>
    <string name="transport">Transport</string>
    <string name="askSpendCost">Please set the spend cost</string>
    <string name="accept">Accept</string>
    <string name="continueText">Continue</string>
    <string name="askDescription">Please set a description</string>

    <string name="askOrigin">Which origin location would you like to choose?</string>
    <string name="currentLocation">Current location</string>
    <string name="fromMap">From map</string>

    <string name="askDestination">Would you like to select a destination location?</string>

    <string name="urlGoogleAuth">https://accounts.google.com/o/oauth2/auth</string>
    <string name="urlGoogleToken">https://oauth2.googleapis.com/token</string>
    <string name="schemeNameRedirect">https</string>
    <string name="hostRedirect">www.google.com</string>


</resources>