<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jrms.summing.ui.spend.list.SpendListFragment"
        android:label="@string/title_spend"
        tools:layout="@layout/fragment_spend">

        <action
            android:id="@+id/navigation_addSpend"
            app:destination="@id/navigation_type_spend_fragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_spend_details_fragment"
            app:destination="@id/navigation_spend_details_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.jrms.summing.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.jrms.summing.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_type_spend_fragment"
        android:name="com.jrms.summing.ui.spend.detail.type.SpendTypeFragment"
        android:label="@string/spend_type"
        tools:layout="@layout/fragment_two_options_question">
        <action
            android:id="@+id/action_navigation_cost_spend_fragment"
            app:destination="@id/navigation_cost_spend_fragment" />

        <action
            android:id="@+id/action_navigation_origin_fragment"
            app:destination="@id/navigation_origin_fragment" />


    </fragment>

    <fragment android:id="@+id/navigation_destination_fragment"
        android:name="com.jrms.summing.ui.spend.detail.location.DestinationLocationFragment"
        android:label="@string/destination"
        tools:layout="@layout/fragment_two_options_question"
        >
        <action
            android:id="@+id/action_navigation_destination_locationFragment"
            app:destination="@id/locationFragment" />
        <action
            android:id="@+id/action_navigation_destination_cost_spend"
            app:destination="@id/navigation_cost_spend_fragment" />
    </fragment>

    <fragment android:id="@+id/navigation_origin_fragment"
        android:name="com.jrms.summing.ui.spend.detail.location.OriginLocationFragment"
        android:label="@string/origin"
        tools:layout="@layout/fragment_two_options_question"

        >
        <action
            android:id="@+id/action_navigation_origin_destination"
            app:destination="@id/navigation_destination_fragment" />
        <action
            android:id="@+id/action_navigation_origin_map_location"
            app:destination="@id/locationFragment" />
        <action
            android:id="@+id/action_navigation_origin_cost"
            app:popUpTo="@id/navigation_type_spend_fragment"
            app:destination="@id/navigation_cost_spend_fragment" />
    </fragment>



    <fragment
        android:id="@+id/navigation_cost_spend_fragment"
        android:name="com.jrms.summing.ui.spend.detail.quantity.SpendQuantityFragment"
        android:label="@string/cost"
        tools:layout="@layout/fragment_spend_quantity" >
        <action
            android:id="@+id/action_navigation_spend_cost_description"
            app:destination="@id/navigation_spend_description_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_spend_details_fragment"
        android:name="com.jrms.summing.ui.spend.detail.SpendDetailFragment"
        android:label="@string/spendDetails"
        tools:layout="@layout/spend_detail_fragment">

        <action
            android:id="@+id/action_navigation_spend_details_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_spend_description_fragment"
        android:name="com.jrms.summing.ui.spend.detail.description.SpendDescriptionFragment"
        android:label="@string/description"
        tools:layout="@layout/fragment_spend_description"
        >
        <action
            android:id="@+id/action_navigation_spend_description_detail"
            app:destination="@id/navigation_spend_details_fragment" />
    </fragment>


    <fragment
        android:id="@+id/locationFragment"
        android:name="com.jrms.summing.ui.location.LocationFragment"
        android:label="@string/setLocation">
        <argument
            android:name="latitude"
            android:defaultValue="0.0"
            app:argType="string" />
        <argument
            android:name="longitude"
            android:defaultValue="0.0"
            app:argType="string" />
        <argument
            android:name="type"
            android:defaultValue="1"
            app:argType="integer" />
        <argument
            android:name="fromDetails"
            android:defaultValue="false"
            app:argType="boolean"
            />
        <action
            android:id="@+id/action_location_cost"
            app:destination="@id/navigation_cost_spend_fragment"
            app:popUpTo="@id/navigation_cost_spend_fragment"
            />
        <action
            android:id="@+id/action_location_destination"
            app:destination="@id/navigation_destination_fragment"
            app:popUpTo="@id/navigation_destination_fragment"
            />
    </fragment>
</navigation>