<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        tools:context=".ui.spend.detail.type.SpendTypeFragment">

        <TextView
            android:id="@+id/askTypeTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/askSpendType"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            />

        <LinearLayout
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/optionsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="10dp"
            >
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generic"
                android:id="@+id/genericSpendButton"
                android:layout_marginEnd="5dp"
                style="?android:attr/button" />
            <Button
                android:layout_weight="1"
                android:id="@+id/transportSpendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                style="?android:attr/button"
                android:text="@string/transport"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
