<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.jrms.summing.ui.addSpend.AddSpendViewModel" />
        <import type="com.jrms.summing.other.Converter"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            tools:context=".ui.addSpend.AddSpendFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCost"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costValue"
                    android:text="@={Converter.doubleToString(viewModel.addSpendObservable.cost)}"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDescription"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/layoutCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionValue"
                    android:text="@={viewModel.addSpendObservable.description}"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:maxLength="256"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerType"
                android:entries="@array/spendType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@android:layout/simple_list_item_1"
                app:layout_constraintTop_toBottomOf="@id/layoutDescription"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/fromLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{viewModel.addSpendObservable.originText}"
                app:layout_constraintTop_toBottomOf="@id/spinnerType"
                />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/toLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{viewModel.addSpendObservable.destinationText}"
                app:layout_constraintTop_toBottomOf="@id/fromLabel"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTransportReference"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/toLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transportReference">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transportReferenceValue"
                    android:text="@={viewModel.addSpendObservable.reference}"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:maxLength="256"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:layout_marginTop="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutTransportReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::saveSpend}"
                android:text="@string/saveSpend" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>