<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="spend"
            type="com.jrms.summing.other.SpendView" />
        <variable
            name="clickListener"
            type="com.jrms.summing.other.ViewCallback" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:foreground="@{spend.selected ? @color/gray_selected : @android:color/transparent}"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"

        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spendParentView"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{clickListener::click}"
            android:clickable="false"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/dateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                />

            <TextView
                android:id="@+id/dateValue"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/dateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="01/01/2021"
                android:text="@{spend.dateFormatted}"
                />

            <TextView
                android:id="@+id/costTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/costValue"
                android:layout_marginEnd="8dp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:text="@string/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{spend.costFormatted}"
                tools:text="0.00"
                android:id="@+id/costValue"
                />

            <TextView
                android:id="@+id/titleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dateTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleDescription"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="this is a test"
                android:text="@{spend.description}"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




</layout>