<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.jrms.summing.ui.spend.detail.SpendDataViewModel" />
        <import type="com.jrms.summing.other.Converter"/>
        <import type="android.view.View"/>
    </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:context=".ui.spend.detail.SpendDetailFragment">

            <ScrollView
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:padding="15dp"
                            android:layout_height="match_parent">
                            <TextView
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:id="@+id/costLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textColor"
                                android:text="@string/cost"
                                android:textStyle="bold"
                                android:textSize="24sp"
                                />
                            <TextView
                                android:id="@+id/costValueTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:text="@{Converter.doubleToString(viewModel.addSpendObservable.cost)}"
                                android:textSize="22sp"
                                tools:text="456.00"
                                />
                            <TextView
                                android:id="@+id/labelDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@id/costLabel"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginTop="10dp"
                                android:text="@string/description"
                                android:textStyle="bold"
                                android:textColor="@color/textColor"
                                android:textSize="24sp"
                                />
                            <TextView
                                android:id="@+id/descriptionValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@id/labelDescription"
                                android:layout_marginTop="10dp"
                                app:layout_constraintStart_toStartOf="parent"
                                android:text="@{viewModel.addSpendObservable.description}"
                                android:textSize="24sp"
                                tools:text="test"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>


            <Button
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/buttonSaveSpend"
                android:layout_marginTop="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveSpend" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>